--- a/resources/assets/sass/_helpers.scss
+++ b/resources/assets/sass/_helpers.scss
@@ -17,6 +17,10 @@
   }
 }
 
+.noscroll {
+  overflow: hidden;
+}
+
 .right {
   float: right;
 }
