--- a/resources/assets/sass/_navbar.scss
+++ b/resources/assets/sass/_navbar.scss
@@ -7,8 +7,8 @@
   left: 0;
   right: 0;
   top: 0;
-  z-index: 9001;
-  min-height: 69px;
+  z-index: 6;
+  height: 70px;
 
   ul {
     padding: 0;
@@ -24,6 +24,16 @@
     &:hover {
       background-color: $deep-purple-300;
     }
+  }
+
+  .navbar-backdrop {
+    position: fixed;
+    top: 70px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: none;
+    background-color: rgba(0,0,0,0.5);
   }
 
   .mobile-social-icons {
@@ -96,21 +106,11 @@
     transition: left 300ms ease-out, right 300ms ease-out;
     -moz-transition: left 300ms ease-out, right 300ms ease-out;
     -webkit-transition: left 300ms ease-out, right 300ms ease-out;
-
-    //transition: background 300ms ease-out;
-    //-moz-transition: background 300ms ease-out;
-    //-webkit-transition: background 300ms ease-out;
-
-    //.navbar-links-list {
-
-
-
-    //}
   }
 
   .navbar-links {
-    top: 69px;
-    left: 0;
+    top: 70px;
+    left: 25vw;
     right: 0;
     bottom: -100vh;
     position: absolute;
@@ -119,10 +119,6 @@
     -moz-transition: left 300ms ease-out, right 300ms ease-out;
     -webkit-transition: left 300ms ease-out, right 300ms ease-out;
 
-    //transition: background 300ms ease-out;
-    //-moz-transition: background 300ms ease-out;
-    //-webkit-transition: background 300ms ease-out;
-
     .navbar-links-list {
       display: flex;
       flex-flow: row wrap;
@@ -130,10 +126,9 @@
       background-color: $deep-purple-500;
       position: absolute;
       top: 0;
-      left: 25vw;
+      left: 0;
       right: 0;
       bottom: 0;
-      box-shadow: -20px 5px 10px rgba(0,0,0,0.4);
 
       & > li {
         border-top: 1px solid white;
